# dojolicious-bot

./: .gitignore  README.md  hello_claude.ipynb  hello_claude.py  pyproject.toml
assets/data/: dataset.json
src/: __init__.py  _types.py  antchat.py  chattypehelpers.py  evalrunner.py  hello_claude.py  main.py
src/antchat/: antchat.py
