[project]
name = "dojolicious-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.57.1",
]

[dependency-groups]
dev = [
    "pyrefly>=0.24.2",
    "ruff>=0.12.3",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]

[tool.marimo.runtime]
dotenv = [".env", ".env.testing"]
auto_instantiate = false
on_cell_change = "lazy"

# Language server configuration
[tool.marimo.language_servers.pylsp]
enabled = true               # Enable/disable the Python language server
enable_mypy = false           # Type checking with mypy (enabled by default, if installed)
enable_ruff = false           # Linting with ruff (enabled by default, if installed)
enable_flake8 = false        # Linting with flake8
enable_pydocstyle = false    # Check docstring style
enable_pylint = false        # Linting with pylint
enable_pyflakes = false      # Syntax checking with pyflakes

# Diagnostics configuration
[tool.marimo.diagnostics]
enabled = true               # Show diagnostics in the editor

[tool.marimo.display]
theme = "dark"
cell_output = "below"
