[project]
name = "dojolicious-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.57.1",
]

[dependency-groups]
dev = [
    "pyrefly>=0.24.2",
    "ruff>=0.12.3",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]